--- a/src/index.css
+++ b/src/index.css
@@ -877,8 +877,7 @@ a:focus {
   text-align: center;
 }
 .list-item.TASK_PINNED .icon-star {
-  /* color: #2cc5d2; */
-  color: red;
+  color: #2cc5d2;
 }
 .list-item.TASK_ARCHIVED input[type='text'] {
   color: #aaa;
